[package]
name = "vendordeps"
description = "Download artifacts using the WPILib vendordep format."
repository = "https://github.com/wilsonwatson/vendordeps"
readme = "README.md"
version = "0.2.0"
documentation = "https://docs.rs/vendordeps/latest/vendordeps/"
edition = "2021"
license = "MIT"

exclude = ["wpilib-index/*"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
zip = { version = "2", default-features = false }
thiserror = "1.0"
jwalk = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
tempfile = "3.9"

[workspace]

resolver = "2"
members = ["wpilib-index"]
