[package]
name = "vendordeps"
description = "Download artifacts using the WPILib vendordep format."
repository = "https://github.com/wilsonwatson/vendordeps"
readme = "README.md"
version = "0.2.1"
documentation = "https://docs.rs/vendordeps/latest/vendordeps/"
edition = "2021"
license = "MIT"

exclude = ["wpilib-index/*"]

[features]

default = []
download = ["dep:reqwest", "dep:zip", "dep:jwalk", "dep:thiserror"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"], optional = true }
zip = { version = "2", default-features = false, features = ["deflate", "deflate64"], optional = true }
thiserror = { version = "1.0", optional = true }
jwalk = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
tempfile = "3.9"

[workspace]

resolver = "2"
members = ["wpilib-index"]
