[package]
name = "wpilib-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
thiserror = "1.0"
jwalk = "0.8"
scraper = "0.19"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
proc-macro2 = "1"
quote = "1"
