[package]
name = "wpilib-index"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
zip = { version = "2", default-features = false }
thiserror = "1.0"
jwalk = "0.8"
scraper = "0.19"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
proc-macro2 = "1"
quote = "1"
